--- a/autotest/templates/automation/result.html
+++ b/autotest/templates/automation/result.html
@@ -246,14 +246,14 @@
                   <table id="table" name="table" class="table table-hover table-sm">
                     <thead>
                       <tr class="solid-header">
-                        <th style="width: 250px;">Project</th>
-                        <th style="width: 30px;">Platform</th>
-                        <th style="width: 200px;">Package</th>
-                        <th style="width: 250px;">Test Case</th>
-                        <th style="width: 300px;">SubServer</th>
-                        <th style="width: 200px;">Exec Time</th>
-                        <th style="width: 50px;">Status</th>
-                        <th style="width: 50px;"></th>
+                          <th style="width: 15%;">Project</th>
+                          <th style="width: 5%;">Platform</th>
+                          <th style="width: 15%;">Package</th>
+                          <th style="width: 15%;">Test Case</th>
+                          <th style="width: 15%;">SubServer</th>
+                          <th style="width: 15%;">Exec Time</th>
+                          <th style="width: 15%;">Status</th>
+                        <th style="width: 5%;"></th>
                       </tr>
                     </thead>
                     <tbody id="tasksPool" name="tasksPool">
@@ -344,13 +344,13 @@
                     <table id="table" name="table" class="table table-hover">
                       <thead>
                         <tr class="solid-header">
-                          <th style="width: 250px;">Case Name</th>
-                          <th style="width: 100px;">Exec Time</th>
-                          <th style="width: 100px;">Result Wanted</th>
-                          <th style="width: 100px;">Result Infact</th>
-                          <th style="width: 80px;">Test Result</th>
-                          <th style="width: 80px;">Cost Time</th>
-                          <th style="width: 20px;">Operation</th>
+                          <th style="width: 20%;">Case Name</th>
+                          <th style="width: 20%;">Exec Time</th>
+                          <th style="width: 20%;">Result Wanted</th>
+                          <th style="width: 20%;">Result Infact</th>
+                          <th style="width: 5%;">Test Result</th>
+                          <th style="width: 10%;">Cost Time</th>
+                          <th style="width: 5%;">Operation</th>
                           <!-- <th style="width: 100px;">运行日志</th> -->
                           <!-- <th style="width: 100px;">详细报告</th> -->
                         </tr>
